After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637520 - Gtk+ seems to have broken Mutter
Gtk+ seems to have broken Mutter
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkStyleContext
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Carlos Garnacho
gtk-bugs
Depends on:
Blocks: 637531
 
 
Reported: 2010-12-18 16:44 UTC by Mathieu Bridon
Modified: 2010-12-21 19:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (2.43 KB, patch)
2010-12-19 16:06 UTC, Colin Walters
none Details | Review
patch (5.78 KB, patch)
2010-12-19 16:06 UTC, Colin Walters
none Details | Review
Return an appropriate GtkStyle from gtk_rc_get_style_by_paths() (5.47 KB, patch)
2010-12-20 18:59 UTC, Owen Taylor
committed Details | Review

Description Mathieu Bridon 2010-12-18 16:44:47 UTC
Today after rebuilding the Gnome-Shell stack with Jhbuild, I couldn't move windows by dragging their titlebar: the whole shell would crash 100% of the times.

fmuellner quickly cooked up a Mutter patch:
http://fpaste.org/whnx/raw/

However, from the IRC log:
<bochecha> fmuellner_, your patch fixes the crash, I can drag windows and use the edge tiling
<fmuellner_> bochecha: ok, but this is still a bug
<fmuellner_> bochecha: specifically, it's a gtk+ bug
<fmuellner_> the mutter patch replaces deprecated gtk+ api, but "deprecated" != "we're gonna segfault your app"
<fmuellner_> (commit 56c3d4b1be looks suspicious)

So here is the mandatory bug report.

For a quicker reference, the changeset fmuellner is talking about is:
* 56c3d4b Remove dead Gtk[Rc]Style code
Comment 1 Colin Walters 2010-12-19 16:06:08 UTC
Created attachment 176710 [details] [review]
patch
Comment 2 Colin Walters 2010-12-19 16:06:55 UTC
Created attachment 176711 [details] [review]
patch
Comment 3 Matthias Clasen 2010-12-20 15:29:55 UTC
Please describe the change in behaviour you are seeing. 
What is different that makes mutter crash ?
Comment 4 Emmanuele Bassi (:ebassi) 2010-12-20 16:20:15 UTC
bug 637531 contains some more investigation.
Comment 5 Emmanuele Bassi (:ebassi) 2010-12-20 16:21:02 UTC
*** Bug 637531 has been marked as a duplicate of this bug. ***
Comment 6 Carlos Garnacho 2010-12-20 16:32:20 UTC
I've just pushed a fix in commit 33cd32f7968f, thanks for the bug report
Comment 7 Owen Taylor 2010-12-20 18:59:01 UTC
Created attachment 176777 [details] [review]
Return an appropriate GtkStyle from gtk_rc_get_style_by_paths()

I don't think using a default GtkStyleContext with a dummy path
from gtk_style_new() does all that much good.
Comment 8 Carlos Garnacho 2010-12-21 00:52:06 UTC
better compatibility is always worthwhile if GtkStyle is to stay, patch looks great to me
Comment 9 Owen Taylor 2010-12-21 19:28:43 UTC
Attachment 176777 [details] pushed as a2dddb1 - Return an appropriate GtkStyle from gtk_rc_get_style_by_paths()